# iBoot64Patcher

./: .gitignore  Makefile.am  README.md  configure.ac
.github/workflows/: main.yml
iBoot64Patcher/: Makefile.am  functions.cpp  functions.hpp  iBoot64Patcher.h  main.cpp  patcher.cpp  patcher.hpp
iBoot64Patcher.xcodeproj/: project.pbxproj
